@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-06T16:26:50Z",
+  "timestamp" : "2022-09-07T02:03:17Z",
   "count_outdated" : 307,
   "uniques_outdated" : 189,
-  "count" : 341,
-  "uniques" : 207,
+  "count" : 342,
+  "uniques" : 208,
   "clones" : [
     {
       "timestamp": "2022-08-26T00:00:00Z",
@@ -42,10 +42,10 @@
     },
     {
       "timestamp": "2022-09-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
