@@ -1,3 +1,11 @@
+2022-09-07T02:03:17Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3004581746
+* notice: last 14d: unq all: 13 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 189 307 / 207 341
+* notice: next accum: outdated-unq outdated-all / unq all: 189 307 / 208 342
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-09-06]
+
 2022-09-06T16:26:50Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3001803128
 * notice: last 14d: unq all: 13 34
